Paste Deployment News
=====================

svn trunk
---------

* Added some documentation for the different kinds of entry points
  Paste Deploy uses.

0.9.6
-----

* Added ``PrefixMiddleware`` which compensates for cases where the
  wsgi app is behind a proxy of some sort that isn't moving the prefix
  into the SCRIPT_NAME in advance.

* Changed _loadconfig() so that it works with Windows absolute paths.

* Make the error messages prettier when you call a function and fail
  to give an argument, like a required function argument.

0.5
---

* Made the ``paste_deploy`` template (used with ``paster create
  --template=paste_deploy``) more useful, with an example application
  and entry point.

0.4
---

* Allow filters to have ``filter-with`` values, just like
  applications.

* Renamed ``composit`` to ``composite`` (old names still work, but
  aren't documented).

* Added ``appconfig()`` to load along with ``loadapp()``, but return
  the configuration without invoking the application.

0.3
---

* Allow variable setting like::

    get local_var = global_var_name

  To bring in global variables to the local scope.

* Allow interpolation in files, like ``%(here)s``.  Anything in the
  ``[DEFAULTS]`` section will be available to substitute into a value,
  as will variables in the same section.  Also, the special value
  ``here`` will be the directory the configuration file is located in.

0.2
---

Released 26 August 2004

* Added a ``filter-with`` setting to applications.

* Removed the ``1`` from all the protocol names (e.g.,
  ``paste.app_factory1`` is not ``paste.app_factory``).

* Added ``filter-app:`` and ``pipeline:`` sections.  `Docs
  <paste-deploy.html#filter-composition>`__.

* Added ``paste.filter_app_factory1`` (`doc
  <paste-deploy.html#paste-filter-app-factory1>`__) and
  ``paste.server_runner1`` (`doc
  <paste-deploy.html#paste-server-runner1>`__) protocols.

* Added ``paste.deploy.converters`` module for handling the